<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Ｖプリカ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="list_vpreca_appbar">Vプリカ一覧</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_text_info">すべてのVプリカ\n残高合計</string>
    <string name="home_text_last_login">前回のログイン</string>
    <string name="home_text_no_card">まだVプリカは発行されていません。</string>
    <string name="home_button_add_new_card">カードを発行する</string>
    <string name="home_button_usage">利用明細</string>
    <string name="home_button_info">カード情報</string>
    <string name="home_button_lock">ロック解除</string>
    <string name="home_button_unlock">ロック</string>
    <string name="home_button_reload">再発行</string>
    <string name="home_button_see_all_card">すべてのVプリカを見る</string>
    <string name="prompt_email">ログインID</string>
    <string name="prompt_password">パスワード</string>
    <string name="action_sign_in">ログイン</string>
    <string name="action_sign_in_faceid">顔認証でログイン</string>
    <string name="action_sign_in_fingerprint">生体認証でログイン</string>
    <string name="action_sign_in_biometric">生体認証でログイン</string>
    <string name="action_sign_in_short">ログイン</string>
    <string name="action_forgot_password">ログインID・パスワードを忘れた場合はこちら</string>
    <string name="action_signup">アカウント新規開設はこちら</string>
    <string name="login_or">または</string>
    <string name="click_here">はこちら</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">@string/rgx_error_login_id</string>
    <string name="invalid_password">@string/rgx_error_password</string>
    <string name="login_failed">ログインパスワードが正しくありません。</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="alert_landline_phone">固定電話を登録されている既存会員さまはブラウザ版で登録電話を携帯電話へ変更してください</string>
    <string name="get_list_card_failure">Get list card failure</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_appbar_policy">新規アカウント開設</string>
    <string name="title_next_policy">@string/button_cancel</string>
    <string name="confirm_policy">上記全ての項目に同意する</string>
    <string name="btn_next_policy">@string/button_next</string>
    <string name="policy_des">以下の内容をよくお読みのうえ、チェックボックスにチェックをして、「次へ」をタップしてください</string>
    <string name="policy_note_top">個人情報の取り扱いに関する同意約款</string>
    <string name="policy_note_bot">会員規約</string>
    <string name="phone_back">戻る</string>
    <string name="title_appbar_phone">新規アカウント開設</string>
    <string name="title_next_phone">@string/button_cancel</string>
    <string name="btn_next_phone">@string/button_next</string>
    <string name="phone_title">電話番号登録</string>
    <string name="phone_des_top">Vプリカアカウントを作成するにはSMS（ショートメールサービス）による認証が必要です。</string>
    <string name="phone_des_bot">以下にSMSを受信できる090/080/070ではじまる電話番号をハイフンを入れずに入力、「電話番号認証」をタップしてください。</string>
    <string name="phone_hint">電話番号</string>
    <string name="des_phone_input">電話番号は、ご連絡先として登録いたします。</string>
    <string name="confirm_phone_title">認証コード入力</string>
    <string name="confirm_phone_des">SMSで認証コードを送信いたしました。受け取った認証コードを入力し、「次へ」ボタンをタップしてください。</string>
    <string name="confirm_phone_des_left">送信先電話番号</string>
    <string name="confirm_phone_des_right">080-0000-0000</string>
    <string name="confirm_phone_hint">認証コード</string>
    <string name="confirm_phone_des_input">認証手続きの有効時間は10分です。\n認証番号の入力を複数回間違えると、同日中の入力が行えなくなります。\n\n認証番号が届かない場合は、「キャンセル」ボタンをタップし、ご登録情報を確認のうえ、再度お手続きください。</string>
    <string name="email_title">メールアドレス登録</string>
    <string name="email_des_top">続いて、メールアドレスによる認証を行います。</string>
    <string name="email_des_bot">続いて、メールアドレスによる認証を行います。\n以下に、認証コードを受信するメールアドレスを入力し、「メールアドレス認証」をタップしてください。</string>
    <string name="email_hint">メールアドレス</string>
    <string name="email_des_input">メールアドレスは、ご連絡先として登録いたします。</string>
    <string name="confirm_email_title">認証コード入力</string>
    <string name="confirm_email_des">SMSで認証コードを送信いたしました。受け取った認証コードを入力し、「次へ」ボタンをタップしてください。</string>
    <string name="confirm_email_des_left">送信先メールアドレス</string>
    <string name="confirm_email_des_right">sample@sample.jp</string>
    <string name="confirm_email_hint">認証コード</string>
    <string name="confirm_email_des_input">認証コードが届かない場合は、「キャンセル」ボタンをタップし、ご登録情報を確認のうえ、再度お手続きください。</string>
    <string name="ten_man_warning">"合算金額は10万円以内です。"</string>
    <string name="des_term_of_use">以下のアプリ利用規約をよくお読みのうえ、「同意して始める」 をタップしてください。</string>
    <string name="confirm_term_of_use">アプリ利用規約に同意する</string>
    <string name="confirm_term_of_use_btn">はじめる</string>
    <string name="signup_input_id_title">ログインID</string>
    <string name="hint_id">半角英数6~10文字</string>
    <string name="password_signup_title">ログインパスワード</string>
    <string name="password_hint">半角英数8〜12文字</string>
    <string name="cf_password_hint">半角英数8〜12文字(確認用)</string>
    <string name="password_warning_title">※以下のパスワードはセキュリティ上、登録しないでください。</string>
    <string name="password_warning_first">・生年月日、電話番号、住所・氏名の一部など</string>
    <string name="password_warning_second">・2種類のみの英数字の組み合わせ(例:1111AAAA, A2A2A2A2 など) </string>
    <string name="password_warning_third">・他サイトと同一のパスワード</string>
    <string name="hint_second_name">メイ（全角）</string>
    <string name="secret_answer_signup_title">秘密の質問の答え</string>
    <string name="gender_confirm_signup_title">性別</string>
    <string name="dov_confirm_signup_title">生年月日</string>
    <string name="addres_confirm_signup_title">居住地</string>
    <string name="phone_confirm_signup_title">電話番号</string>
    <string name="secret_confirm_signup_title">秘密の質問</string>
    <string name="password_confirm_signup_title">パスワード</string>
    <string name="complete_signup_message_first">ログインボタンをタップすると、Vプリカサービスがご利用いただけます。</string>
    <string name="complete_signup_message_second">登録内容をご登録いただいたメールアドレスに送信いたしましたのでご確認ください。</string>
    <string name="btn_complete">ログイン</string>
    <string name="forgot_pass_des_top">ご登録いただいているメールアドレスにログインパスワードの再設定用URLを送信します。\n以下の項目を入力して「メール送信」をタップしてください。</string>
    <string name="forgot_pass_email_title">メールアドレス1</string>
    <string name="forgot_pass_dob_title">生年月日</string>
    <string name="forgot_pass_phone_hint">090000000000</string>
    <string name="forgot_pass_warning_top">生年月日と電話番号のいずれかひとつ必須</string>
    <string name="forgot_pass_secret_answer_title">秘密の質問の答え</string>
    <string name="forgot_pass_secret_answer_hint">全角20文字以内</string>
    <string name="forgot_pass_btn_submit">メール送信</string>
    <string name="forgot_pass_error_email">正しいメールアドレスを入力してください。</string>
    <string name="forgot_pass_error_dob">@string/rgx_error_birthdate</string>
    <string name="forgot_pass_error_secret_question">選択してください</string>
    <string name="forgot_pass_error_secret_answer">@string/rgx_error_secret_answer</string>
    <string name="empty"></string>
    <string name="issue_card_by_code_select_source_confirm_appbar_title">残高加算内容確認</string>
    <string name="issue_card_by_code_select_source_confirm_title">加算内容を確認してください。</string>
    <string name="issue_card_by_code_select_source_confirm_des">「発行」ボタンを選択すると手続きが完了いたします。</string>
    <string name="issue_card_by_code_select_source_confirm_gift_value_title">合算金額</string>
    <string name="issue_card_by_code_select_source_confirm_select_value_title">合算後の残高</string>
    <string name="issue_card_by_code_select_source_confirm_btn">発行</string>
    <string name="complete_forgot_title">メール送信完了</string>
    <string name="complete_forgot_des_top">ご登録いただいているメールアドレスにログインパスワードの再設定用URLを送信いたしました</string>
    <string name="complete_forgot_des_bot">送信させていただいたURLよりログインパスワード星設定画面へ進み、ログインパスワードの再設定をお願いします。</string>
    <string name="appbar_sms_title">自動ログイン認証</string>
    <string name="sms_verify_des_top">自動ログインの有効期限が切れました。</string>
    <string name="sms_verify_phone_example">080-0000-0000</string>
    <string name="sms_verify_description_first">認証手続きの有効時間は10分です。</string>
    <string name="sms_overtimes_title">制限回数を超えました</string>
    <string name="sms_overtimes_des_top">セキュリティ保護のために一時的にSMS認証を停止いたします。</string>
    <string name="sms_overtimes_des_bot">しばらく経ってから再度やりなおしてください</string>
    <string name="sms_code_expired_title">有効期限切れ</string>
    <string name="sms_code_expired_des_top">SMS認証の有効期限が切れています。</string>
    <string name="sms_code_expired_des_bot">再度お手続きをお願いいたします。</string>
    <string name="change_phone_expire_des">セキュリティ保護のために一時的にメールコード認証を停止いたします。</string>
    <string name="change_pass_appbar_title">パスワード変更</string>
    <string name="change_pass_title">ログインパスワード変更</string>
    <string name="change_pass_des">ログインパスワードの再設定を行います。</string>
    <string name="change_pass_old_pass_title">現在のログインパスワード</string>
    <string name="change_pass_old_pass_hint">半角英数字8〜12文字</string>
    <string name="change_pass_new_pass_title">新しいログインパスワード</string>
    <string name="change_pass_new_pass_hint">半角英数字8〜12文字</string>
    <string name="change_pass_cf_new_pass_hint">半角英数8~12文字（確認用）</string>
    <string name="change_pass_warning_title">以下のパスワードはセキュリティ上、登録しないでください。</string>
    <string name="change_pass_warning_first">生年月日、電話番号、氏名や住所の一部など</string>
    <string name="change_pass_warning_second">２種類のみの英数字の組み合わせ（例：1111aaaa、A2A2A2A2 など）</string>
    <string name="change_pass_warning_third">他サイトと同一のパスワード</string>
    <string name="change_pass_btn_submit">変更</string>
    <string name="change_pass_new_pass_error">半角英数字8〜12文字で入力してください。</string>
    <string name="change_pass_cf_new_pass_error">@string/rgx_error_email_confirm_not_match</string>
    <string name="change_pass_complete_title">変更完了</string>
    <string name="change_pass_complete_des">お手続きが完了しました。</string>
    <string name="change_pass_complete_btn">ホーム</string>
    <string name="gift_card_appbar_title">ギフトカード登録</string>
    <string name="gift_card_title_top">お手持ちギフトカード情報を</string>
    <string name="gift_card_title_bot">アカウントに登録できます</string>
    <string name="gift_card_input_card_title">カード番号 （半角数字16桁）</string>
    <string name="gift_card_input_expired_title">有効期限（MONTH/YEAR）</string>
    <string name="gift_card_input_pin_code">セキュリティコード（半角数字3桁）</string>
    <string name="gift_card_input_btn_submit">確認</string>
    <string name="gift_card_confirm_appbar_title">カード情報確認</string>
    <string name="gift_card_confirm_btn">@string/button_next</string>
    <string name="gift_card_confirm_amount_title">残高</string>
    <string name="gift_card_confirm_amount_holder">¥5,000</string>
    <string name="gift_card_confirm_detail_usage">利用明細</string>
    <string name="gift_card_confirm_warning_title">特記事項</string>
    <string name="gift_card_confirm_warning_dot">•</string>
    <string name="gift_card_confirm_warning_first_line">カード番号はお手元のVプリカをご確認ください。</string>
    <string name="menu_app_version">バージョン : %1$s</string>
    <string name="copyright_life_card_co_ltd">Copyright © LIFE CARD Co., Ltd.\nAll rights reserved</string>
    <string name="logout">ログアウト</string>
    <string name="bod_dialog_title_phone">電話番号の変更</string>
    <string name="bod_dialog_des_phone">電話番号を変更する場合は、以下の項目を入力のうえ、「変更」ボタンをタップしてください。</string>
    <string name="bod_dialog_input_title">生年月日</string>
    <string name="bod_dialog_cancel_btn">@string/button_cancel</string>
    <string name="bod_dialog_submit_btn">変更</string>
    <string name="first_row">利用日</string>
    <string name="sec_row">ステータス</string>
    <string name="third_row">利用先</string>
    <string name="four_row">利用金額</string>
</resources>