<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="22dp"
        android:paddingTop="19dp"
        android:paddingRight="22dp"
        android:paddingBottom="19dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.TextView.Bold"
            android:text="@string/first_row"
            android:textSize="10sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.TextView.Bold"
            android:text="@string/sec_row"
            android:textSize="10sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.TextView.Bold"
            android:text="@string/third_row"
            android:textSize="10sp" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Widget.AppCompat.TextView.Bold"
            android:id="@+id/amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/four_row"
            android:textSize="10sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>