<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.lifecard.vpreca.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_to_card_usage"
            app:destination="@id/nav_card_usage" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.lifecard.vpreca.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.lifecard.vpreca.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.lifecard.vpreca.ui.login.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_card_usage"
        android:name="com.lifecard.vpreca.ui.card_usage.CardUsageFragment"
        android:label="Login"
        tools:layout="@layout/fragment_card_usage">
        <argument
            android:name="card"
            app:nullable="true"
            android:defaultValue="@null"
            app:argType="com.lifecard.vpreca.data.model.CreditCard" />
    </fragment>
</navigation>