<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.signup/SignupFragment"
        >
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/appbar_policy">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="32dp"
                android:paddingTop="32dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:text="@string/phone_back"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/title_appbar_phone"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:text="@string/title_next_phone"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="14sp"/>
            </LinearLayout>
        </com.google.android.material.appbar.AppBarLayout>
        <LinearLayout
            android:id="@+id/indication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/appbar_policy"
            android:orientation="horizontal"
            android:paddingVertical="16dp"
            android:gravity="center_horizontal|center_vertical">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@drawable/indicator_active"
                android:layout_marginHorizontal="8dp"
                />
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@drawable/indicator_active"
                android:layout_marginHorizontal="8dp"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@drawable/indicator_active"
                android:layout_marginHorizontal="8dp"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@drawable/indicator_inactive"
                android:layout_marginHorizontal="8dp"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@drawable/indicator_inactive"
                android:layout_marginHorizontal="8dp"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@drawable/indicator_inactive"
                android:layout_marginHorizontal="8dp"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@drawable/indicator_inactive"
                android:layout_marginHorizontal="8dp"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@drawable/indicator_inactive"
                android:layout_marginHorizontal="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/phone_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/indication"
            android:gravity="center_horizontal"
            android:layout_marginTop="32dp"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_phone_title"
                android:textSize="18sp"
                android:textColor="@color/light_blue_600"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/phone_title"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="32dp"
            android:orientation="vertical"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_phone_des"
                android:textSize="12sp"

                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_phone_des_left"
                    android:layout_weight="1"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_phone_des_right"
                    android:layout_weight="1"
                    android:gravity="end"/>
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_confirm"
                style="@style/Widget.App.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="40dp"
                android:hint="@string/confirm_phone_hint"
                android:inputType="number"
                android:selectAllOnFocus="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_phone_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#F3F3F3"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_phone_des_input"
                android:textSize="12sp"
                android:layout_marginTop="8dp"
                />
        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submit_phone_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/btn_next_phone"
            android:layout_marginBottom="8dp"
            android:enabled="false"
            android:layout_marginHorizontal="16dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>