<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:background="@drawable/border_introduce_checkbox"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="21dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        android:paddingTop="34dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bod_dialog_title_phone"
            android:textSize="18sp"
            style="@style/Widget.AppCompat.TextView.Bold"
            android:gravity="center_horizontal"/>
        <TextView
            android:paddingTop="13dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:lineSpacingExtra="6sp"
            android:text="@string/bod_dialog_des_phone"/>
        <TextView
            style="@style/Widget.AppCompat.TextView.Bold"
            android:paddingTop="13dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:lineSpacingExtra="6sp"
            android:text="@string/bod_dialog_input_title"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dob_dialog"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="9dp"
            android:background="@drawable/input_signup_style"
            android:gravity="center_vertical"
            android:paddingHorizontal="21dp"
            android:hint="@string/forgot_pass_dob_hint"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_marginTop="9dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="生年月日認証エラー"
            android:visibility="invisible"
            android:layout_gravity="right"
            android:textColor="@color/error"
            android:textSize="11sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/layout_show_secret_answer"
            android:layout_marginTop="21dp"
            >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dialog_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="9dp"
                android:layout_marginEnd="9dp"
                android:paddingVertical="6dp"
                android:textColor="@color/primary"
                android:textSize="18sp"
                android:textStyle="bold"
                style="@style/AppTheme.RoundedCornerMaterialButton"
                android:text="@string/bod_dialog_cancel_btn"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dialog_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginLeft="9dp"
                android:layout_marginStart="9dp"
                android:paddingVertical="12dp"
                android:text="@string/bod_dialog_submit_btn"
                app:cornerRadius="30dp"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>