<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/nav_header_main" android:id="@+id/nav_header" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_menu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="5"
        tools:listitem="@layout/layout_drawer_item" />

    <!--    Footer-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="26dp"
        android:paddingBottom="26dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_logout"
            style="@style/Widget.App.TextButton.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:paddingHorizontal="16dp"
            android:textColor="@color/peacock_blue"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textAppVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/menu_app_version"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="4sp"
            android:padding="0dp"
            android:text="@string/copyright_life_card_co_ltd"
            android:textColor="@color/brown_grey"
            android:textSize="14sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>